[gd_scene load_steps=22 format=2]

[ext_resource path="res://Images/Characters/Enemies/Skeleton.png" type="Texture" id=1]
[ext_resource path="res://Script/CharacterScript/SkeletonScript.gd" type="Script" id=2]
[ext_resource path="res://Scene/Effects/EnemyPoof.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/GUI/HeartContainer.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 8, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 16, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 24, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 8, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 24, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 8, 8 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 8, 24, 8, 8 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 16, 24, 8, 8 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 3 ), SubResource( 1 ), SubResource( 4 ) ],
"loop": true,
"name": "Move",
"speed": 7.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "Raise",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4, 4.5 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 3, 3.5 )

[node name="SkeletonEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )
speed = 10
PoofVar = ExtResource( 3 )
HeartVar = ExtResource( 4 )

[node name="SkeletonEnemy" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "Raise"
frame = 9
playing = true

[node name="SkeletonEnemyArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SkeletonEnemyArea"]
position = Vector2( 0, 0.5 )
shape = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 19 )

[connection signal="animation_finished" from="SkeletonEnemy" to="." method="_on_SkeletonEnemy_animation_finished"]
[connection signal="body_entered" from="SkeletonEnemyArea" to="." method="_on_SkeletonEnemyArea_body_entered"]
